--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@master
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
       with:
-        use-quiet-mode: 'yes'
+        use-verbose-mode: 'yes'
         config-file: '.github/mlc_config.json'
         file-path: './README.md'
