update gh action cronjob

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -5,8 +5,8 @@ on:
     branches:
     - main
   schedule:
-  # Run everyday at 9:00 AM (See https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07)
-  - cron: "0 9 * * *"
+  # Run at 9:00 AM every Friday
+  - cron: "0 9 * * 5"
 
 jobs:
   markdown-link-check:
