update gh action config

--- a/.github/mlc_config.json
+++ b/.github/mlc_config.json
@@ -19,6 +19,14 @@
             "headers": {
                 "Accept-Encoding": "zstd, br, gzip, deflate"
             }
+        },
+        {
+            "urls": [
+                "http"
+            ],
+            "headers": {
+                "User-Agent": "GitHub Action"
+            }
         }
     ],
     "ignorePatterns": [
